--- a/css/style.css
+++ b/css/style.css
@@ -49,9 +49,9 @@ body._lock {
 }
 
 .container {
-    max-width: 1376px;
+    max-width: 1356px;
     margin: 0 auto;
-    padding: 0 40px;
+    padding: 0 30px;
 }
 
 *,
@@ -114,9 +114,9 @@ button {
     padding: 0;
 }
 
-.section__title {
+/* .section__title {
 
-}
+} */
 
 .btn {
     padding: 24px 48px;
@@ -137,14 +137,14 @@ button {
     transition: background-color .5s ease;
 }
 
-._anim-show {
+/* ._anim-show {
     
 }
 
 ._anim-show._active,
 ._active ._anim-show {
     
-}
+} */
 
 
 
@@ -326,6 +326,130 @@ button {
 
 
 
+/* section about */
+.about {
+    background: linear-gradient(0deg, #1E262F 0%, #1E262F 100%), #181C1D;
+    color: #FFFFFF;
+    padding: 174px 0;
+    position: relative;
+}
+
+/* .vertical__line {
+    width: 2px;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.10);
+    position: absolute;
+    right: 2%;
+} */
+
+.about__inner {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.about__logo-img {
+    width: 60px;
+    height: 18px;
+    transform: rotate(-90deg);
+}
+
+/* .about__logo::after {
+    content: '';
+    position: absolute;
+    width: 2px;
+    height: 100%;
+    top: 0;
+    left: 10%;
+    background: rgba(255, 255, 255, 0.10);
+} */
+
+.about__section-title {
+    font-family: 'Inter', sans-serif;
+    font-size: 32px;
+    font-weight: 600;
+    letter-spacing: -0.64px;
+    line-height: 113%;
+    margin-bottom: 16px;
+}
+
+.about__link,
+.about__sublink {
+    display: block;
+    font-family: 'Inter', sans-serif;
+    font-weight: 300;
+    line-height: 113%;
+    opacity: 0.25;
+    margin-bottom: 16px;
+}
+
+.about__link {
+    font-size: 24px;
+    letter-spacing: -0.48px;
+}
+
+.about__sublink {
+    display: block;
+    font-size: 18px;
+    letter-spacing: -0.36px;
+}
+
+.about__content {
+    color: rgba(255, 255, 255, 0.80);
+    text-shadow: 0px 0px 0px rgba(0, 0, 0, 0.10), 0px 4px 9px rgba(0, 0, 0, 0.10), -1px 16px 16px rgba(0, 0, 0, 0.09), -3px 35px 21px rgba(0, 0, 0, 0.05), -6px 62px 25px rgba(0, 0, 0, 0.01), -9px 98px 27px rgba(0, 0, 0, 0.00);
+    display: flex;
+}
+
+.company__name {
+    font-family: 'Oranienbaum', serif;
+    font-size: 56px;
+    line-height: 113%;
+    max-width: 240px;
+    display: flex;
+    align-items: center;
+    margin: 0 20px 100px;
+}
+
+.block__content {
+    text-align: right;
+}
+
+.block__video {
+    position: relative;
+    max-width: 376px;
+    margin: 0 0 44px auto;
+}
+
+.company__video {
+    width: 100%;
+    border-radius: 12px;
+    
+}
+
+.btn__video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: transparent;
+    border-radius: 50%;
+    border: none;
+    cursor: pointer;
+}
+
+.block__company-text {
+    text-align: left;
+}
+
+.company__text {
+    font-family: 'Inter', sans-serif;
+    font-weight: 300;
+    letter-spacing: -0.32px;
+    max-width: 453px;
+    margin-bottom: 16px;
+}
+
+
 
 
 
@@ -485,6 +609,36 @@ footer {
     .build__text {
         font-size: 16px;
     }
+    .about {
+        padding: 80px 0;
+    }
+    .about__title {
+        margin-right: 20px;
+    }
+    .about__section-title {
+        font-size: 27px;
+    }
+    .about__link {
+        font-size: 19px;
+    }
+    .about__sublink {
+        font-size: 15px;
+    }
+    .about__content {
+        flex-wrap: wrap;
+        text-align: right;
+        justify-content: center;
+    }
+    .company__name {
+        margin: 0 20px 40px;
+        font-size: 45px;
+    }
+    .block__video {
+        margin: 0 auto 44px;
+    }
+    .block__company-text {
+        font-size: 14px;
+    }
 }
 
 @media (max-width: 640px) {
@@ -563,5 +717,32 @@ footer {
 @media (max-width: 480px) {
     .build__title {
         font-size: 40px;
+    }
+    .about {
+        padding: 60px 0;
+    }
+    .about__inner {
+        flex-wrap: wrap;
+    }
+    .about__logo {
+        display: none;
+    }
+    .about__title {
+        text-align: center;
+        margin: 0;
+    }
+    .about__content {
+        text-align: center;
+    }
+    .company__name {
+        margin: 0 20px 25px;
+        font-size: 40px;
+    }
+    .block__video {
+        margin: 0 auto 24px;
+    }
+    .block__company-text {
+        text-align: center;
+        font-size: 12px;
     }
 }
