--- a/css/style.css
+++ b/css/style.css
@@ -244,6 +244,10 @@ button {
 
 /* section build */
 
+body._touch .build {
+    min-height: 100dvh;
+}
+
 .build {
     min-height: 100vh;
     position: relative;
