--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,8 @@ button {
 
 /* section build */
 
-body._touch .build {
+body._touch .build,
+body._touch .build__bg {
     min-height: 100dvh;
 }
 
