--- a/css/style.css
+++ b/css/style.css
@@ -261,7 +261,7 @@ body._touch .build__bg {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     object-fit: cover;
     z-index: -1;
 }
